--- a/install.txt
+++ b/install.txt
@@ -2,3 +2,5 @@ pip install django-jazzmin
 pip install markdown
 pip install django-crispy-forms
 pip install crispy-bootstrap4
+pip install python-dotenv
+pip install gunicorn
